@@ -1,0 +1,306 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!--
+	Fibaro Motion Sensor FGMS-001-ZW5
+	http://manuals.fibaro.com/content/manuals/en/FGMS-001/FGMS-001-EN-T-v2.0.pdf
+	-->
+	<!-- Configuration -->
+	<CommandClass id="112">
+		<Value type="byte" genre="config" instance="1" index="1" label="Motion detection - sensitivity" min="0" max="255" value="15">
+			<Help>
+				The lower the value, the more sensitive the PIR sensor is.
+				Available settings: 8 - 255
+				Default setting: 15
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="2" label="Motion detection - blind time" min="0" max="15" value="3">
+			<Help>
+				PIR sensor is blind (insensitive) to motion after last detection for the amount of time speci ed in this parameter.
+				Shorter time periods allow to detect motion more frequently, but the battery will be drained faster.
+				Available settings: 0 - 15 (0.5-8 seconds).
+				Formula to calculate the time: time [s] = 0.5 x (value+1))
+				Default setting: 3
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="3" label="Motion detection - pulse counter" min="0" max="3" value="1" size="1">
+			<Help>
+				This parameter determines the number of moves required for the PIR sensor to report motion. The higher the value, the less sensitive the PIR sensor is.
+				It is not recommended to modify this parameter settings!
+				Default setting: 1 (2 pulses)
+			</Help>
+			<Item label="1 pulse" value="0" />
+			<Item label="2 pulses" value="1" />
+			<Item label="3 pulses" value="2" />
+			<Item label="4 pulses" value="3" />
+		</Value>
+		<Value type="list" genre="config" instance="1" index="4" label="Motion detection - window time" min="0" max="3" value="2" size="1">
+			<Help>
+				Period of time during which the number of moves set in parameter 3 must be detected in order for the PIR sensor to report motion.
+				The higher the value, the more sensitive the PIR sensor is.
+				It is not recommended to modify this parameter setting!
+				Default setting: 2 (12 seconds)
+			</Help>
+			<Item label="4 seconds" value="0" />
+			<Item label="8 seconds" value="1" />
+			<Item label="12 seconds" value="2" />
+			<Item label="16 seconds" value="3" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="6" label="Motion detection - alarm cancellation delay" units="seconds" min="1" max="65535" value="30">
+			<Help>
+				Time period after which the motion alarm will be cancelled in the main controller and associated devices.
+				Any motion detected during this period resets the timer.
+				Available settings: 1 - 65535
+				Default setting: 30 (30 seconds)
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="8" label="Motion detection - operating mode" min="0" max="2" value="0" size="1">
+			<Help>
+				This parameter determines in which part of day the PIR sensor will be active.
+				This parameter influences only the motion reports and associations.
+				Tamper, light intensity and temperature measurements will be still active, regardless of this parameter settings.
+				Default setting: 0 (always active)
+			</Help>
+			<Item label="PIR sensor always active" value="0" />
+			<Item label="PIR sensor active during the day only" value="1" />
+			<Item label="PIR sensor active during the night only" value="2" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="9" label="Motion detection - night/day" units="lux" min="1" max="65535" value="200">
+			<Help>
+				This parameter de nes the difference between night and day in terms of light intensity, used in parameter 8.
+				Available settings: 1 - 65535
+				Default setting: 200 (200 lux)
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="12" label="BASIC command class configuration" min="0" max="2" value="0" size="1">
+			<Help>
+				This parameter determines the command frames sent to 2nd association group (assigned to PIR sensor).
+				Default setting: 0 (ON and OFF)
+			</Help>
+			<Item label="BASIC On and OFF" value="0" />
+			<Item label="Only the BASIC On" value="1" />
+			<Item label="Only the BASIC OFF" value="2" />
+		</Value>
+		<Value type="short" genre="config" instance="1" index="14" label="BASIC ON command frame value" min="0" max="255" value="255" size="2">
+			<Help>
+				The command frame sent at the moment of motion detection.
+				Further motion detections, during the cancellation time, will not result in sending the association.
+				Available settings: 0 - 255
+				Default setting: 255
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="16" label="BASIC OFF command frame value" min="0" max="255" value="0" size="2">
+			<Help>
+				The command frame sent at the moment of motion alarm cancellation, after cancellation delay time specified in parameter 6.
+				Available settings: 0 - 255
+				Default setting: 0
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="18" label="Associations in Z-Wave network security mode" size="1" min="0" max="15" value="0">
+			<Help>
+				This parameter de nes how commands are sent in specified association groups: as secure or non-secure.
+				Parameter is active only in Z-Wave network security mode. It does not apply to 1st group Lifeline.
+				Available settings 0 - 15:
+				0 - none of the groups sent as secure 1 - 2nd group sent as secure.
+				2 - 3rd group sent as secure.
+				4 - 4th group sent as secure.
+				8 - 5th group sent as secure.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="20" label="Tamper - sensitivity" min="0" max="121" value="20">
+			<Help>
+				This parameter determines the change in force acting on the device, that will result in reporting tamper alarm - g-force acceleration.
+				Available settings: 0 - 121 (0.08 - 2g; multiply by 0.016g; 0 = tamper inactive)
+				Default setting: 20 (0.4g)
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="22" label="Tamper - alarm cancellation delay" units="seconds" min="1" max="32767" value="30">
+			<Help>
+				Time period after which a tamper alarm will be cancelled in the main controller and associated devices.
+				Any tampering detected during this period will not extend the delay.
+				Available settings: 1 - 65535
+				Default setting: 30 (seconds)
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="24" label="Tamper - operating modes" min="0" max="2" value="0" size="1">
+			<Help>
+				This parameter determines function of the tamper and sent reports.
+				It is an advanced feature serving much more functions than just detection of tampering.
+				Default setting: 0 (Tamper)
+			</Help>
+			<Item label="Tamper only" value="0" />
+			<Item label="Tamper and earthquake detector" value="1" />
+			<Item label="Tamper and orientation in space" value="2" />
+		</Value>
+		<Value type="list" genre="config" instance="1" index="25" label="Tamper - alarm cancellation" min="0" max="1" value="1" size="1">
+			<Help>
+				This parameter allows to disable cancellation of the tamper alarm.
+				Default setting: 0 (Tamper).
+			</Help>
+			<Item label="Do not send tamper cancellation report" value="0"/>
+			<Item label="Send tamper cancellation report" value="1"/>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="28" label="Tamper alarm broadcast mode" min="0" max="1" value="0" size="1">
+			<Help>
+				The parameter determines whether the tamper alarm frame will or will not be sent in broadcast mode.
+				Alarm frames sent in broadcast mode can be received by all of the devices within range (if they accept such frames), but not repeated by them.
+				Default setting: 0
+			</Help>
+			<Item label="Tamper alarm sent to 3rd association group" value="0" />
+			<Item label="Tamper alarm sent in broadcast mode" value="1" />
+		</Value>
+		<Value type="list" genre="config" instance="1" index="29" label="Tamper - backward compatible broadcast mode" min="0" max="1" value="0" size="1">
+			<Help>
+				The parameter determines whether the backward compatible tamper alarm frame will or will not be sent in broadcast mode.
+				Alarm frames sent in broadcast mode can be received by all of the devices within range (if they accept such frames), but not repeated by them.
+				This parameter provides backward compatibility with controllers not supporting Z-Wave+.
+				Default setting: 0
+			</Help>
+			<Item label="Backward compatible tamper alarm sent to 5th association group" value="0"/>
+			<Item label="Backward compatible tamper alarm sent in broadcast mode" value="1"/>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="40" label="Luminance report - threshold" min="0" max="32767" units="lux" value="200">
+			<Help>
+				This parameter determines the change in light intensity level resulting in luminance report being sent to the main controller.
+				Available settings:
+				0 - reports are not sent.
+				1-32767 (luminance in lux).
+				Default setting: 200 (200 lux).
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="42" label="Luminance reports - interval" min="0" max="32767" units="seconds" value="0">
+			<Help>
+				Time interval between consecutive luminance reports.
+				The reports are sent even if there is no change in the light intensity.
+				Available settings: 0 - 32767.
+				0 - periodical reports are not sent.
+				1-32767 (in seconds).
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="60" label="Temperature report - threshold" min="0" max="255" value="10">
+			<Help>
+				This parameter determines the change in measured temperature that will result in new temperature report being sent to the main controller.
+				Available settings: 0 - 255 (0.1 - 25.5C; 0 = reports are not sent)
+				Default setting: 10 (1C)
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="62" label="Temperature measuring - interval" min="0" max="32767" units="seconds" value="900">
+			<Help>
+				Time interval between consecutive temperature measurements.
+				The shorter the time, the more frequently the temperature will be measured, but the battery life will shorten.
+				Available settings: 0 - 32767 (1 - 32767 seconds; 0 = temperature is not measured)
+				Default setting: 900 (900 seconds).
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="64" label="Temperature report - interval" min="0" max="32767" units="seconds" value="0">
+			<Help>
+				Time interval between consecutive temperature reports. The reports are sent even if there is no change in the temperature.
+				Available settings: 0 - 32767 (1 - 32767 seconds; 0 = periodical reports are not sent)
+				Default setting: 0
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="66" label="Temperature offset" min="0" max="65535" value="0">
+			<Help>
+				The value to be added to the actual temperature, measured by the sensor (temperature compensation).
+				Available settings: 0 - 100 (0 to 100C) or 64536 - 65535 (-100 to -0.10C)
+				Default setting: 0
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="80" label="Visual LED indicator - signalling mode" min="0" max="26" value="10" size="1">
+			<Help>
+				This parameter determines the way in which visual indicator behaves after motion has been detected.
+				Default setting: 10 (Flashlight mode)
+			</Help>
+			<Item label="LED inactive." value="0" />
+			<Item label="1 long blink, LED colour depends on the temperature. Set by parameters 86 and 87." value="1" />
+			<Item label="Flashlight mode - LED glows in white for 10 seconds." value="2" />
+			<Item label="Long blink White." value="3" />
+			<Item label="Long blink Red." value="4" />
+			<Item label="Long blink Green." value="5" />
+			<Item label="Long blink Blue." value="6" />
+			<Item label="Long blink Yellow." value="7" />
+			<Item label="Long blink Cyan." value="8" />
+			<Item label="Long blink Magenta." value="9" />
+			<Item label="Long blink, then short blink, LED colour depends on the temperature. Set by parameters 86 and 87." value="10" />
+			<Item label="Flashlight mode - LED glows in white through 10 seconds.  Each next detected motion extends the glowing by next 10 seconds." value="11" />
+			<Item label="Long blink, then short blinks White." value="12" />
+			<Item label="Long blink, then short blinks Red." value="13" />
+			<Item label="Long blink, then short blinks Green." value="14" />
+			<Item label="Long blink, then short blinks Blue." value="15" />
+			<Item label="Long blink, then short blinks Yellow." value="16" />
+			<Item label="Long blink, then short blinks Cyan" value="17" />
+			<Item label="Long blink, then short blinks Magenta" value="18" />
+			<Item label="Long blink, then 2 short blinks, LED colour depends on the temperature. Set by parameters 86 and 87." value="19" />
+			<Item label="Long blink, then 2 short blinks White" value="20" />
+			<Item label="Long blink, then 2 short blinks Red" value="21" />
+			<Item label="Long blink, then 2 short blinks Green" value="22" />
+			<Item label="Long blink, then 2 short blinks Blue" value="23" />
+			<Item label="Long blink, then 2 short blinks Yellow" value="24" />
+			<Item label="Long blink, then 2 short blinks Cyan" value="25" />
+			<Item label="Long blink, then 2 short blinks Magenta" value="26" />
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="81" label="Visual LED indicator - brightness" min="0" max="100" units="%" value="50">
+			<Help>
+				This parameter determines the brightness of the visual LED indicator when indicating motion.
+				Available settings: 0 - brightness determined by the luminance (parameters 82 and 83).
+				1-100 (1-100%)
+				Default setting: 50 (50 %)
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="82" label="Visual LED indicator - luminance for low indicator brightness" min="0" max="32767" units="lux" value="100">
+			<Help>
+				Light intensity level below which brightness of visual indicator is set to 1%.
+				Available settings: 0 to value of parameter 83 (in lux).
+				Default setting: 100.
+			</Help>
+		</Value>
+		<Value type="short" genre="config" instance="1" index="83" label="Visual LED indicator - luminance for high indicator brightness" min="0" max="32767" units="lux" value="1000">
+			<Help>
+				Light intensity level above which brightness of visual indicator is set to 100%.
+				Available settings: value of parameter 82 to 32767 (in lux)
+				Default setting: 1000 (1000 lux)
+				NOTE
+				The value of the parameter 83 must be higher than the value of the parameter 82.
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="86" label="Visual LED indicator - temperature for blue colour" min="0" max="255" units="Celsius" value="18">
+			<Help>
+				This parameter is determines minimal temperature that will result in blue visual indicator colour.
+				Relevant only when parameter 80 has been properly configured.
+				Available settings: 0 to value of parameter 87 (in Celsius degree)
+				Default setting: 18 (18C)
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="87" label="Visual LED indicator - temperature for red colour" min="0" max="255" units="Celsius" value="28">
+			<Help>
+				This parameter is determines minimal temperature that will result in red visual indicator colour.
+				Relevant only when parameter 80 has been properly configured.
+				Available settings: value of parameter 86 to 255 (in Celsius degree)
+				Default setting: 28 (28C)
+			</Help>
+		</Value>
+		<Value type="list" genre="config" instance="1" index="89" label="Visual LED indicator - tamper alarm" min="0" max="1" value="1" size="1">
+			<Help>
+				Indicating mode resembles a police car (white, red and blue).
+				Default setting: 1 (on)
+			</Help>
+			<Item label="Tamper alarm is not indicated" value="0" />
+			<Item label="Tamper alarm is indicated" value="1" />
+		</Value>
+	</CommandClass>
+
+   <!-- Basic set as report -->
+   <CommandClass id="32" setasreport="true"/>
+
+  <!-- Association Groups -->
+  <CommandClass id="133">
+	  <Associations num_groups="5">
+		  <Group index="1" max_associations="1" label="Lifeline"/>
+		  <Group index="2" max_associations="5" label="Motion"/>
+		  <Group index="3" max_associations="5" label="Tamper"/>
+		  <Group index="4" max_associations="5" label="Motion BC" auto="true"/>
+		  <Group index="5" max_associations="5" label="Tamper BC" auto="true"/>
+	  </Associations>
+  </CommandClass>
+
+</Product>
