@@ -144,6 +144,7 @@ Version 1.5
  - Issue #1046 - Add Config for TZ45A from RCS (darrinsmart)
  - Add Zipato ZP3102-EU Multisensor Duo (Nechry)
  - Add homeseer hs-wd100plus (Nechry)
+ - Add Fibaro FGMS001-ZW5 Motion Sensor (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
